--- a/index.html
+++ b/index.html
@@ -172,6 +172,11 @@ to {left:100%;}
 .menlatitem:hover{opacity:.5}
 #mapa{ width:100%;height:0; visibility:hidden; position:relative}
 #wv1{ width:100%;}
+@media only screen 
+and (max-width : 320px) {
+/* Styles */
+#title{ font-size:13px; }
+}
 </style>
 <script type="text/javascript" src="js/panino.js"></script>
 <script type="text/javascript" src="js/comunes.js"></script>
