--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ html,body{ height:100%}
     font-style: normal;
 
 }
-#title{ width:230px; padding:0 20px; height:60px; font-family:movistar_headlineregular; line-height:60px; color:#FFF; font-size:18px; font-weight:bold; float:left}
+#title{ padding:0 20px; height:60px; font-family:movistar_headlineregular; line-height:60px; color:#FFF; font-size:18px; font-weight:bold; float:left}
 #tricon{ width:55px; height:60px; position:absolute; top:0; right:0; background: url(images/menu_icon.png) center center no-repeat; background-size:26px 20px; cursor:pointer}
 #tituloprincipal{ font-family:movistar_headlineregular; color:#0F5C84; font-size:14px; padding-left:37px; background: url(images/icon_star.png) 14px 14px no-repeat; background-size:17px 16px; padding-top:14px; padding-bottom:10px}
 #tituloprincipal span{ display:block; height:1px; background:#E5E5E5; width:100%; position:relative; top:-3px; left:90px}
