--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ and (max-width : 320px) {
 <script type="text/javascript" src="js/utils.js"></script>
 <script type="text/javascript" src="js/paninoAJAX.js"></script>
 <script type="text/javascript" src="js/transicion.js"></script>
-<!--<script type="text/javascript" charset="utf-8" src="cordova.js"></script> -->
+<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script type="text/javascript" src="js/ip.js"></script>
 
 </head>
@@ -220,8 +220,8 @@ and (max-width : 320px) {
     </div>
 <div id="cuerpo">
   <h1 id="tituloprincipal">Destacados<span></span></h1>
-    <a href="#" id="btdescarga"><img src="images/app_4g.png" width="57" height="57">4G Lite<span></span></a>
-    <div id="descripapp">Con 4G Lite podrás saber la ubicación de las antenas LTE  y los centros de pruebas de Movistar.</div>
+    <div id="envprinc"><a href="#" id="btdescarga"><img src="images/app_4g.png" width="57" height="57">4G Lite<span></span></a>
+    <div id="descripapp">Con 4G Lite podrás saber la ubicación de las antenas LTE  y los centros de pruebas de Movistar.</div></div>
   
   <nav id="optsdestacados">
   		<div class="btdest btselected"><span></span><img src="images/app_4g.png" width="50" height="50"><label>4G Lite</label></div>
