--- a/index.html
+++ b/index.html
@@ -170,14 +170,13 @@ to {left:100%;}
 .menlatitem{ height:50px; color:#FFF; font-family:movistar_headlineregular; line-height:50px; font-size:12px; border-bottom:1px solid #3A3A3C; padding-left:20px;opacity: 1;
    -webkit-transition: opacity .25s ease-in-out; cursor:pointer;}
 .menlatitem:hover{opacity:.5}
-#mapa{ width:100%;height:0; visibility:hidden; position:relative; overflow:hidden}
+#mapa{ width:100%;height:0; visibility:hidden; position:relative; overflow:hidden; background:url(images/ajax-loader.gif) center center no-repeat #fff;}
 #wv1{ width:100%;}
 @media only screen 
 and (max-width : 320px) {
 /* Styles */
 #title{ font-size:13px; }
 }
-#loading{ position:fixed; top:-14000px; z-index:10000; left:50%; margin-left:-8px;}
 </style>
 <script type="text/javascript" src="js/panino.js"></script>
 <script type="text/javascript" src="js/comunes.js"></script>
@@ -191,7 +190,6 @@ and (max-width : 320px) {
 </head>
 
 <body>
-<img id="loading" src="images/ajax-loader.gif">
 <!-- términos -->
 <div id="terminos">
 	<h1 id="title4">Términos y condiciones</h1>
