--- a/index.html
+++ b/index.html
@@ -219,22 +219,14 @@ and (max-width : 320px) {
     </div>
 <div id="cuerpo">
   <h1 id="tituloprincipal">Destacados<span></span></h1>
-    <div id="envprinc"><a href="#" id="btdescarga"><img src="images/app_4g.png" width="57" height="57">4G Lite<span></span></a>
-    <div id="descripapp">Con 4G Lite podrás saber la ubicación de las antenas LTE  y los centros de pruebas de Movistar.</div></div>
+    <div id="envprinc"></div>
   
   <nav id="optsdestacados">
-  		<div class="btdest btselected"><span></span><img src="images/app_4g.png" width="50" height="50"><label>4G Lite</label></div>
-        <div class="btdest"><span></span><img src="images/app_tugo.png" width="50" height="50"><label>TuGo</label></div>
-        <div class="btdest"><span></span><img src="images/app_numfree.png" width="50" height="50"><label>Números free</label></div>
-        <div class="btdest"><span></span><img src="images/app_micuenta.png" width="50" height="50"><label>MI Cuenta</label></div>
+  		
   </nav>
    <h1 id="title2">Categorías</h1>
    <nav id="optscats">
-       <div class="btcat"><span></span><img src="images/cat_ajustes.png" width="50"><label>Ajustes</label></div>
-       <div class="btcat"><span></span><img src="images/cat_atencion.png" width="50"><label>Atención al cliente</label></div>
-       <div class="btcat btcatselected"><span></span><img src="images/cat_comunidad_on.png" width="50"><label>Comunidad</label></div>
-       <div class="btcat"><span></span><img src="images/cat_pc.png" width="50"><label>PC</label></div>
-       <div class="btcat"><span></span><img src="images/cat_juegos.png" width="58"><label>Juegos</label></div>
+      
    </nav>
     <h1 id="title3"></h1>
      <nav id="icons">
