--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@ and (max-width : 320px) {
 <script type="text/javascript" src="js/utils.js"></script>
 <script type="text/javascript" src="js/paninoAJAX.js"></script>
 <script type="text/javascript" src="js/transicion.js"></script>
+<script type="text/javascript" src="js/transicionSimple.js"></script>
 <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script type="text/javascript" src="js/ip.js"></script>
 
