--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ html,body{ height:100%}
 .btdesticon{display:inline-block; width:25%;height:110px; cursor:pointer; position:relative; min-width:77px;}
 .btdesticon img{ position:absolute; left:50%; margin-left:-25px; top:20px;}
 .btdesticon label{ width:100%; text-align:center; position:absolute; left:0; top:75px; color:#0F5C84; font-family:movistar_headlineregular; font-size:10px;}
-#app{ position:relative; height:0; visibility:hidden; overflow:hidden}
+#app{ position:relative; height:0; visibility:hidden; overflow:hidden; background:#fff; width:100%}
 #tap{ width:100%; height:100%; background: url(images/container-128.png) center center no-repeat #E5E5E5; position:absolute; overflow:hidden}
 #terminos{ width:90%;height:0; margin:auto; background:#fff; margin-top:0; position:relative; overflow:hidden}
 #text_terms{ width:90%; height:70%; margin:auto; position:relative;  overflow:auto; background:#005474;  font-family:movistar_headlineregular;   color:#FFF; font-size:10px; padding:10px}
@@ -188,8 +188,8 @@ and (max-width : 320px) {
 <script type="text/javascript" src="js/paninoAJAX.js"></script>
 <script type="text/javascript" src="js/transicion.js"></script>
 <script type="text/javascript" src="js/transicionSimple.js"></script>
-<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-<script type="text/javascript" src="js/ip.js"></script>
+<!--<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+ --><script type="text/javascript" src="js/ip.js"></script>
 
 </head>
 
