--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ to {left:100%;}
 .menlatitem{ height:50px; color:#FFF; font-family:movistar_headlineregular; line-height:50px; font-size:12px; border-bottom:1px solid #3A3A3C; padding-left:20px;opacity: 1;
    -webkit-transition: opacity .25s ease-in-out; cursor:pointer;}
 .menlatitem:hover{opacity:.5}
-#mapa{ width:100%;height:0; visibility:hidden; position:relative; overflow:hidden; background:url(images/ajax-loader.gif) center center no-repeat #fff;}
+#mapa{ width:100%;height:0; visibility:hidden; position:relative; overflow:hidden; background:url(images/ajax-loader.gif) center center no-repeat #fff;-webkit-overflow-scrolling:touch;}
 #wv1{ width:100%;}
 @media only screen 
 and (max-width : 320px) {
