--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
 <style>
 *{ margin:0; padding:0; outline:none}
-html,body{ height:100%}
+html,body{ height:100%; background:#FFF}
 #header{ height:62px; background:#005474; width:100%; border:2px solid #004D6E; position:fixed; z-index:1000; box-sizing:border-box}
 #button_home{ width:55px; height:60px; border-right:2px solid #004D6E; background: url(images/menu_home_bg.png) center center no-repeat; background-size:50px 58px; float:left; cursor:pointer}
 @font-face {
@@ -173,7 +173,7 @@ to {left:100%;}
 .menlatitem{ height:50px; color:#FFF; font-family:movistar_headlineregular; line-height:50px; font-size:12px; border-bottom:1px solid #3A3A3C; padding-left:20px;opacity: 1;
    -webkit-transition: opacity .25s ease-in-out; cursor:pointer;}
 .menlatitem:hover{opacity:.5}
-#mapa{ width:100%;height:0; visibility:hidden; position:relative; overflow:hidden; background:url(images/ajax-loader.gif) center center no-repeat #fff;-webkit-overflow-scrolling:touch;}
+#mapa{ width:100%;height:0; visibility:hidden; position:relative; overflow:hidden; background:url(images/ajax-loader.gif) center center no-repeat #fff;}
 #wv1{ width:100%;}
 @media only screen 
 and (max-width : 320px) {
