--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ html,body{ height:100%; background:#FFF}
 }
 #btdescarga code{font-family:movistar_headlineregular; color:#0F5C84; font-size:18px;}
 #btdescarga img{ margin-left:21px; margin-right:10px; position:relative; top:2px;}
-#btdescarga span{ width:31px; height:26px; background:url(images/icon_download.png) 0 bottom no-repeat; display: inline-block;  position:relative; top:2px; margin-left:10px;}
+#btdescarga span{ width:34px; height:26px; background:url(images/abrir.png) 0 bottom no-repeat; display: inline-block;  position:relative; top:2px; margin-left:10px;}
 #descripapp{ height:45px; padding: 12px 24px; color:#BCBCBC; font-family:movistar_headlineregular; font-size:14px; margin-bottom:12px}
 #optsdestacados,#optscats{ height:127px; background:#fff;overflow:auto; overflow-y:hidden;white-space: nowrap;width:100%; font-size:0; }
 .btdest{display:inline-block; width:25%; background:#E5E5E5;height:110px; cursor:pointer; position:relative; box-sizing:border-box; border-left:1px solid #F1F1F1;border-right:1px solid #F1F1F1; min-width:77px; margin:0;}
