--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 *{ margin:0; padding:0; outline:none}
 html,body{ height:100%; background:#FFF}
 #header{ height:62px; background:#005474; width:100%; border:2px solid #004D6E; position:fixed; z-index:1000; box-sizing:border-box}
-#button_home{ width:55px; height:60px; border-right:2px solid #004D6E; background: url(images/menu_home_bg.png) center center no-repeat; background-size:50px 58px; float:left; cursor:pointer}
+#button_home{ /*width:55px;*/ width:0; height:60px; border-right:2px solid #004D6E; background: url(images/menu_home_bg.png) center center no-repeat; background-size:50px 58px; float:left; cursor:pointer; overflow:hidden}
 @font-face {
     font-family: 'movistar_headlineregular';
     src: url('font/movistarheadline-regular-webfont.eot');
